- 프로젝트 기초 구현 완료

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -57,7 +57,7 @@
       ]
     }
   },
-  "extends": "expo/tsconfig.base",
+  "extends": "expo/tsconfig.base.json",
   "include": [
     "**/*.ts",
     "**/*.tsx",
