--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,11 +41,14 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+      - "8081:8081"  # Expo DevTools
     volumes:
       - ./frontend:/app
       - /app/node_modules
+      - /app/.expo
     environment:
-      - EXPO_PUBLIC_API_URL=http://backend:8000
+      - EXPO_PUBLIC_API_URL=http://localhost:8000  # 브라우저에서 호출하므로 localhost
+      - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
     depends_on:
       - backend
     command: npm run web
