--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@rn-primitives/slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "expo": "~54.0.20",
     "expo-font": "^14.0.9",
     "expo-status-bar": "~3.0.8",
@@ -23,11 +24,15 @@
     "nativewind": "^4.2.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-native": "0.81.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.2",
+    "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "^0.21.2",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "zod": "^3.25.76"
   },
   "private": true,
   "devDependencies": {
