--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,11 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "httpx>=0.27.0",
     "chromadb>=0.5.0",
+    "langgraph>=0.2.0",
+    "langchain>=0.3.0",
+    "langchain-core>=0.3.0",
+    "langchain-openai>=0.2.0",
+    "langchain-anthropic>=0.2.0",
 ]
 
 [project.optional-dependencies]
