레거시 코드 제거

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,9 +12,18 @@ DATABASE_URL=sqlite:///./seoul_travel.db
 OPENAI_API_KEY=sk-proj-your-openai-api-key-here
 OPENAI_MODEL=gpt-4o-mini
 
-# Seoul Open Data API
-# Get your API key from: https://data.seoul.go.kr/
-SEOUL_OPENAPI_KEY=your-seoul-openapi-key-here
+# Naver API
+# Get your API key from: https://developers.naver.com/
+NAVER_CLIENT_ID=your-naver-client-id-here
+NAVER_CLIENT_SECRET=your-naver-client-secret-here
+
+# Kakao API
+# Get your API key from: https://developers.kakao.com/
+KAKAO_REST_API_KEY=your-kakao-rest-api-key-here
+
+# ODsay API (Public Transit)
+# Get your API key from: https://lab.odsay.com/
+ODSAY_API_KEY=your-odsay-api-key-here
 
 # Auth
 SECRET_KEY=dev-secret-key-change-in-production
