--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.8.4",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
@@ -22,15 +26,18 @@
     "expo": "~54.0.20",
     "expo-font": "^14.0.9",
     "expo-status-bar": "~3.0.8",
+    "i18next": "^25.6.1",
     "lucide-react-native": "^0.548.0",
     "nativewind": "^4.2.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-i18next": "^16.2.4",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
     "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "^0.21.2",
     "tailwindcss": "^3.4.18",
