임시커밋 - 플랜 서비스 프론트에서 리스트 받게 했는데 문법에러 있음.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ yarn-error.*
 /android
 .playwright-mcp/
 
+# OpenAPI (auto-generated)
+openapi.json
+frontend/openapi.json
+backend/openapi.json
+
 # Backend (Python)
 __pycache__/
 *.py[cod]
