--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "dayjs": "^1.11.19",
     "expo": "~54.0.20",
     "expo-font": "^14.0.9",
+    "expo-linear-gradient": "^15.0.7",
     "expo-status-bar": "~3.0.8",
     "i18next": "^25.6.1",
     "lucide-react-native": "^0.548.0",
